[package]
name = "paseto-auth"
version = "0.1.0"
edition = "2024"
authors = ["Alptekin Bodur"]
description = "Paseto v4.public microservice compatible library for token creation and validation"
readme = "README.md"
license = "MIT"
repository = "https://github.com/alptekinbodur/paseto-auth"

[dependencies]
ed25519-dalek = "2.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
base64 = "0.22.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
hex = "0.4.3"
thiserror = "2.0.17"